Revise hero section content in index.html
Updated the hero section text to reflect new branding and messaging.

--- a/index.html
+++ b/index.html
@@ -54,12 +54,13 @@
   <section class="hero" id="home">
     <div class="container hero-inner">
       <div class="hero-text reveal">
-        <h1 class="title">Hi, I'm <span class="gold">Joseph Uzoukwu</span></h1>
-        <p class="subtitle">Designer • Developer • Brand Builder</p>
-        <p class="intro">
-          I craft elegant visuals and high-converting websites for brands. From sleek portfolios to advanced web apps,
-          I make your imagination a reality.
-        </p>
+       <h1 class="title">Hi, I'm <span class="gold">Joseph Uzoukwu</span></h1>
+<p class="subtitle">Strategic Designer • Web Developer • Brand Builder</p>
+<p class="intro">
+I help businesses and startups grow by turning ideas into premium digital experiences — from sleek websites to powerful brand identities.  
+Let’s create something that stands out globally.
+</p>
+
         <div class="cta">
           <a href="#projects" class="btn btn-solid">See My Work</a>
           <a href="#contact" class="btn btn-ghost">Hire Me</a>
