Revise 'About Me' section for clarity and impact
Updated the 'About Me' section to reflect a more concise and professional description of skills and experiences.

--- a/index.html
+++ b/index.html
@@ -171,23 +171,20 @@ Let’s create something that stands out globally.
   <section class="section" id="about">
     <div class="container about">
       <div class="about-text reveal">
-        <h2 class="section-title">About Me</h2>
-        <p>
-          I’m Joseph Uzoukwu, a passionate web developer, graphic designer, and entrepreneur with a creative eye for design and a strategic mind for business. Through ZionDesigns and Zion Holdings, I specialize in creating modern, professional, and user-friendly digital solutions — from websites that stand out to branding that connects with people.
+      <h2 class="section-title">About Me</h2>
+<p>
+I’m Joseph Uzoukwu — a designer, web developer, and entrepreneur behind <strong>ZionDesigns</strong> and <strong>Zion Holdings</strong>. I craft modern, user-friendly digital solutions that help brands grow and connect with audiences.  
 
-Beyond tech and design, I’m also building in real estate and interior design, combining creativity with functionality to bring visions to life.
+My expertise spans web development, branding, UI/UX, and motion design. I combine creativity with strategy to deliver experiences that convert and inspire.
+</p>
+<ul class="skills">
+  <li>HTML / CSS / JavaScript</li>
+  <li>React / Frontend Development</li>
+  <li>UI / UX Design</li>
+  <li>Branding & Graphics</li>
+  <li>Motion & Animations</li>
+</ul>
 
-What drives me is simple: turning ideas into reality — whether it’s through code, visuals, or business innovation.
-
-When I’m not coding or designing, you’ll find me exploring new ideas, inspiring people through ministry, and constantly learning how to add more value to the world.
-        </p>
-        <ul class="skills">
-          <li>HTML/CSS/JS</li>
-          <li>React</li>
-          <li>UI/UX</li>
-          <li>Brand Design</li>
-          <li>Motion</li>
-        </ul>
       </div>
       <div class="about-card reveal">
         <div class="about-badge">Available for work</div>
